fixed width overflow, added 5px padding to body, set default mobile view to .5 scale

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,6 +1,7 @@
 body {
   background: #ffffff;
   font-family: "Helvetica", "Arial", sans-serif;
+  padding: 5px;
 }
 
 h1, h2, h3, h4, h5, h6 { color: #004B75; }
